syntax = "proto3";
package Protocol;

import "Enum.proto";

message PosInfo
{
	float x = 1;
	float y = 2;
	float z = 3;
	MoveDir dir = 4;
}

message StatInfo
{
	float max_hp = 1;
	float hp = 2;
	float damage = 3;
}

message CreatureInfo
{
	CreatureType creature_type = 1;
	StatInfo stat_info = 2;
	CreatureState state = 3;
}

message ObjectInfo
{
	uint64 object_id = 1;
	ObjectType object_type = 2;
	PosInfo pos_info = 3;
	CreatureInfo creature_info = 4;
}
